<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andnd.me.myappportfolio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_header"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bSpotifyStreamer"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/themeColor"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/str_spotify_streamer"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bScoresAPP"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/themeColor"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/str_scores_app"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bLibraryApp"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/themeColor"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/str_lib_app"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bBuildBigger"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/themeColor"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/str_build_bigger"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bXYZReader"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/themeColor"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/str_xyz_reader"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bMyOwnApp"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="#9a004b"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/str_my_own_app"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>